service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-test-service
spec:
  selector:
    app: echomicroservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31000
  type: NodePort
