gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: echoservice-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoservice
spec:
  hosts:
    - "*"
  gateways:
    - echoservice-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: spring-test-service
            port:
              number: 8080
